Added title in views

--- a/views/new.erb
+++ b/views/new.erb
@@ -1,7 +1,8 @@
 <div class="snippet">
 	<form action="/" method="POST" accept-charset="utf-8">
+		<p><label for="name">Title: </label><input type="text" name="snippet_title" /><p>
 		<textarea name="snippet_body" id="snippet_body" rows="20"></textarea>
-
+		<br/>
 		<p><input type="submit" value="Save"></p>
 	</form>
 </div>
