--- a/views/show.erb
+++ b/views/show.erb
@@ -1,5 +1,5 @@
 <div class="snippet">
-	<h1><%= snippet.title %></h1>
+	<h1><%= @snippet.title %></h1>
 	<div class="sbody" id="content">
 		<%= @snippet.formatted_body %>
 	</div>
