--- a/views/show.erb
+++ b/views/show.erb
@@ -6,5 +6,5 @@
 	<div class="sdate">
 		Created on <%= @snippet.created_at.strftime("%B %d, %Y at %I:%M %p") %>
 	</div>
-	<br/><a href="/">Create new gist!</a>
+	<br/><a href="/">Create new paste!</a>
 </div>
